Fix T62680 Mirrored objects have flipped binormal vectors in LookDev

Pass binormal sign via object info.