source/blender/gpu/shaders/gpu_shader_material.glsl
@@ -2977,7 +2977,7 @@ void node_light_falloff(float strength, float tsmooth, out float quadratic, out 
 	constant = strength;
 }
 
-void node_object_info(mat4 obmat, vec3 info, out vec3 location, out float object_index, out float material_index, out float random)
+void node_object_info(mat4 obmat, vec4 info, out vec3 location, out float object_index, out float material_index, out float random)
 {
 	location = obmat[3].xyz;
 	object_index = info.x;
@@ -2985,14 +2985,14 @@ void node_object_info(mat4 obmat, vec3 info, out vec3 location, out float object
 	random = info.z;
 }
 
-void node_normal_map(vec4 tangent, vec3 normal, vec3 texnormal, out vec3 outnormal)
+void node_normal_map(vec4 info, vec4 tangent, vec3 normal, vec3 texnormal, out vec3 outnormal)
 {
 	if (all(equal(tangent, vec4(0.0, 0.0, 0.0, 1.0)))) {
 		outnormal = normal;
 		return;
 	}
 	tangent *= (gl_FrontFacing ? 1.0 : -1.0);
-	vec3 B = tangent.w * cross(normal, tangent.xyz);
+	vec3 B = tangent.w * cross(normal, tangent.xyz) * info.w;
 
 	outnormal = texnormal.x * tangent.xyz + texnormal.y * B + texnormal.z * normal;
 	outnormal = normalize(outnormal);
